# debian.packaging.make-doc

./: Makefile.DOS  Makefile.am  Makefile.in  NMakefile  README  README.DOS  README.W32  SMakefile  aclocal.m4  build.sh.in  config.ami  config.h-vms  config.h.W32  config.h.in  configh.dos  configure  configure.in  expand.c  make-doc-non-dfsg_3.81.orig.tar.gz.delta  make-doc-non-dfsg_3.81.orig.tar.gz.id  make-doc-non-dfsg_4.0.orig.tar.gz.delta  make-doc-non-dfsg_4.1.orig.tar.gz.delta  make-doc-non-dfsg_4.1.orig.tar.gz.id  make.1  read.c  variable.c
config/: Makefile.in
debian/: changelog  clean  control  copyright  make-doc.doc-base  make-doc.docs  make-doc.lintian-overrides  rules  watch
debian/upstream/: signing-key.asc
doc/: Makefile.in  make.info  make.info-1  make.info-2  make.texi
glob/: Makefile.in
po/: be.gmo  be.po  da.gmo  da.po  de.gmo  de.po  es.gmo  es.po  fi.gmo  fi.po  fr.gmo  fr.po  ga.gmo  ga.po  gl.gmo  gl.po  he.gmo  he.po  hr.gmo  hr.po  id.gmo  id.po  ja.gmo  ja.po  ko.gmo  ko.po  make.pot  nl.gmo  nl.po  pl.gmo  pl.po  pt_BR.gmo  pt_BR.po  ru.gmo  ru.po  rw.gmo  rw.po  sv.gmo  sv.po  tr.gmo  (+7 more)
tests/scripts/functions/: sort
w32/: Makefile  Makefile.in
w32/include/: sub_proc.h
